# micro-plugin

./: CMakeLists.txt  readme.md
include/: plugin_loader.h  plugin_manager.h  plugin_utils.h
src/: main.c  plugin_loader.c  plugin_manager.c  plugin_utils.c
tests/: app.properties  env.ini  main.lua  packager.py  test_plugin_manager.c
